--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@
 # ============================================================================
 # General Settings
 # ============================================================================
-# Use 256 colors
-set -g default-terminal "screen-256color"
+# Use 256 colors with true color support
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Set prefix to Ctrl-a (easier than Ctrl-b)
@@ -81,36 +81,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # ============================================================================
-# Status Bar Styling
-# ============================================================================
-# Status bar position
-set -g status-position bottom
-
-# Status bar colors
-set -g status-style bg=colour234,fg=colour137
-
-# Window status
-setw -g window-status-current-style fg=colour81,bg=colour238,bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-style fg=colour138,bg=colour235,none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-# Pane border
-set -g pane-border-style fg=colour238
-set -g pane-active-border-style fg=colour51
-
-# Message text
-set -g message-style bg=colour235,fg=colour166
-
-# Status left - session name
-set -g status-left-length 20
-set -g status-left '#[fg=colour233,bg=colour245,bold] #S #[fg=colour245,bg=colour234,nobold]'
-
-# Status right - date and time
-set -g status-right-length 50
-set -g status-right '#[fg=colour233,bg=colour241,bold] %m/%d #[fg=colour233,bg=colour245,bold] %H:%M '
-
-# ============================================================================
 # Plugins (using TPM - Tmux Plugin Manager)
 # ============================================================================
 # List of plugins
@@ -119,6 +89,24 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+
+# Catppuccin theme settings
+set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Tmux Resurrect settings
 set -g @resurrect-strategy-vim 'session'
